# CPP

./: .gitignore
AdvancedCPP/: CMakeLists.txt
AdvancedCPP/Bridge/: CMakeLists.txt  Strings.cpp
AlibabaOTelHTTP/: CMakeLists.txt  main.cpp  main.cpp.bk
Coroutine/: CMakeLists.txt  main.cpp
GenTrack/: CMakeLists.txt
GenTrack/Task1/: CMakeLists.txt  Task1.cpp  Task1.h
GenTrack/Task2/: CMakeLists.txt  Task.cpp
Hands-On-Design-Patterns/: CMakeLists.txt  Hands-On-Design-Patterns.pro
Hands-On-Design-Patterns/Chapter04/: CMakeLists.txt  std_swap_noncopyable.cpp  std_swap_nonmovable.cpp
Hands-On-Design-Patterns/Chapter04/test/: CMakeLists.txt  test.cpp
NeneMileAssignment/: CMakeLists.txt  main.cpp
NineMileAssignment/: CMakeLists.txt  exchange_traits.h  main.cpp  market_data_message.h  recovery.h
OpenTel/examples/otlp/: docker-compose.yml
OpenTel/examples/otlp/opentelemetry-collector-config/: config.dev.yaml
Practice/: CMakeLists.txt
Practice/AsyncTask/: AsyncTask.cpp  AsyncTask.h  CMakeLists.txt  threadpool.cpp  threadpool.h
Practice/Bridge/: Bridge.cpp  Bridge.h  BridgeClasses.cpp  BridgeClasses.h  CMakeLists.txt
Practice/DesignPatterns/: CMakeLists.txt  VariadicBuilder.h  factories.cpp  factories.h  main.cpp  person.cpp  person.h  pimpl.cpp  pimpl.h  singletondb.cpp  singletondb.h  specificationfilter.cpp  specificationfilter.h  strategy.h  visitor.cpp  wrapper.h
Practice/LeetcodeTest/: CMakeLists.txt
Practice/LeetcodeTest/tests/: CMakeLists.txt  tst_test1.cpp
Practice/MarketDataSimulator/: CMakeLists.txt  FeedStatistics.cpp  FeedStatistics.h  LockGuard.h  LockingStrategy.h  MarketData.cpp  MarketData.h  MarketDataFeed.cpp  MarketDataFeed.h  MarketDataReader.cpp  MarketDataReader.h  README.md  SynchronizedQueue.cpp  SynchronizedQueue.h  main.cpp
Practice/MarketDataSimulator/tests/: LockingStrategyTests.cpp  LockingStrategyTests.h  PerformanceTests.cpp  PerformanceTests.h  README.md  TestFramework.h  test_main.cpp
Practice/ProducerConsumer/: .clang-format  CMakeLists.txt  instrument.h  main.cpp  order.h  types.h
Practice/ProducerConsumer/.cache/clangd/index/: main.cpp.29FB60564A537FA4.idx  test_main.cpp.83ED1AE9B5C78E88.idx
Practice/ResourceManager/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  resource.h
Practice/ShoppingMall/: CMakeLists.txt  main.cpp
Practice/Templates/: CMakeLists.txt  Templates.cpp  Templates.h  Templates_def.cpp  concepts.h  variadic_sum.h
Practice/Test/: CMakeLists.txt  main.cpp
Practice/ThreadManagementGuide/: CMakeLists.txt  main.cpp
Practice/ThreadManagementGuide-accumulate/: CMakeLists.txt  main.cpp
Practice/UserDB/: CMakeLists.txt  main.cpp
Practice/WorkerActivity/: CMakeLists.txt  main.cpp
Practice/ZeroOne/: CMakeLists.txt  buffer.h  date.cpp  date.h  feed.cpp  feed.h  main.cpp  myuniqueptr.h
Qt_event_loops/: main.cpp
SimpleVideoStreamSplit/: CMakeLists.txt  main.cpp
Udemy/DesignPatterns/: README.txt
VSCodeTest/Test/: CMakeLists.txt  main.cpp
VSCodeTestProject/: CMakeLists.txt  VSCodeTestProject.cpp  VSCodeTestProject.h
VandevoordeTempl/: VandevoordeTempl.pro
VandevoordeTempl/Src/: Src.pro
VandevoordeTempl/Src/Chapter1/: Chapter1.pro  func_return_type.h
VandevoordeTempl/Src/TemplateVirtualClasses/: TemplateVirtualClasses.pro  database.cpp  database.h  executionpolicy.h  main.cpp  rdbms.cpp  rdbms.h
VandevoordeTempl/VTGTest/: VTGTest.pro  gtest_dependency.pri  tst_func_return_type.cpp  tst_mytestcase.cpp
VandevoordeTempl/VTQtTest/: VTQtTest.pro  tst_example.cpp
client_server/: CMakeLists.txt
client_server/client/: CMakeLists.txt  client.cpp
client_server/server/: CMakeLists.txt  server.cpp
handson/: handson.qbs
handson/src/unittest/: unittest.qbs
mycoro-loop/: main.cpp  mycoro-loop.pro  task.h
mycoro-ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mycoro-ui.pro  task.h
rest-coro/: spec.yaml
rest-coro/client/: client.pro  er_apidefault.cpp  er_apidefault.h  er_base.cpp  er_base.h  er_dispatcher.cpp  er_dispatcher.h  er_future.h  er_integrationmanager.cpp  er_integrationmanager.h  helper.h  main.cpp  mainwindow.cpp  mainwindow.h
rest-coro/client/DB/REST/: restexecutor.h
rest-coro/client/openapi/client/: CMakeLists.txt  ER_DefaultApi.cpp  ER_DefaultApi.h
rest-coro/client/qcoro/: CMakeLists.txt  QCoro  QCoroAbstractSocket  QCoroAsyncGenerator  QCoroCore  QCoroCoroConfig.cmake.in  QCoroFuture  QCoroFwd  QCoroGenerator  QCoroIODevice  QCoroImageProvider  QCoroLocalSocket  QCoroMacros.cmake  QCoroNetwork  QCoroNetworkReply  QCoroProcess  QCoroQml  QCoroQmlTask  QCoroSignal  QCoroTask  QCoroTcpServer  QCoroTest  QCoroThread  QCoroTimer  QCoroWebSocket  QCoroWebSocketServer  QCoroWebSockets  concepts_p.h  coroutine.h  macros_p.h  qcoro.h  qcoro.pri  qcoroasyncgenerator.h  qcorocore_export.h  qcorofwd.h  qcorogenerator.h  qcoronetwork_export.h  qcoroqml_export.h  qcorotask.h  task.h  (+1 more)
rest-coro/client/qcoro/core/: CMakeLists.txt  qcorocore.h  qcorofuture.h  qcoroiodevice.cpp  qcoroiodevice.h  qcoroiodevice_p.cpp  (+8 more)
rest-coro/server/: server.py
strong-er-networking/: .gitignore  README.md  connection.cpp  connection.h  networklistener.cpp  networklistener.h  networkmanager.cpp  networkmanager.h  networkmanagerclient.cpp  networkmanagerclient.h  networkmanagerserver.cpp  networkmanagerserver.h  peermanager.cpp  peermanager.h  peermanagerclient.cpp  peermanagerclient.h  peermanagerserver.cpp  peermanagerserver.h  server.cpp  server.h  strong-er-networking.pri
templates/: templates.qbs
templates/mylib/: caller.cpp  caller.h  mylib.qbs  variadic_call.h
templates/unittest/: tst_forward.cpp  tst_testcase.cpp  unittest.qbs
unittest/: tst_decay.cpp
wasm/common/log/: logger.cpp  logger.h
wasm/websocket-client-1/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  websocket-client-1.pro  websocketclient.cpp  websocketclient.h
wasm/websocket-server-1/: main.cpp  websocket-server-1.pro  websocketserver.cpp  websocketserver.h
websocket-client-1/: main.cpp  websocket-client-1.pro
websocket-server-1/: websocketserver.cpp  websocketserver.h
(+39 files in other folders)
